fix: Adjusted transition timings and added z-index to Appbar component
Increased transition durations for opacity and transform in the global styles. Fixed a typo in the terms page title. Added a z-index property to the Appbar component for proper layering.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,19 +89,19 @@
     white-space: normal; /* Permite que se ajuste al contenido */
   }
   #leading-actions {
-    transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+    transition: opacity 0.2s ease-in-out, transform 0.3s ease-in-out;
   }
 
   .opacity-0 {
     opacity: 0;
     pointer-events: none;
-    /* transform: translateY(-5px);  */
+    transform: translateY(-5px); 
   }
 
   .opacity-100 {
     opacity: 1;
     pointer-events: auto;
-    /* transform: translateY(0); */
+    transform: translateY(0);
   }
 }
 @layer base {
